# usb-ip-emu

./: .gitignore  README.md  pyproject.toml
src/analysis/: analysis.py  similarity.py
src/cli/: __main__.py
src/cli/commands/: emulate.py  pcap.py  server.py
src/device/: basedevice.py  configuration.py  descriptors.py  devicelist.py  endpoint.py  interface.py  request.py  setup.py  strings.py  testdevice.py
src/device/descriptors/: __init__.py  base.py  configuration.py  device.py  endpoint.py  fixed.py  hid.py  interface.py  maxsize.py  string.py
src/device/enum/: descriptor_types.py  endpoint.py
src/devices/: emulateddevice.py  testdevice.py
src/protocol/: usbmon.py
src/protocol/usb/: __init__.py  setup.py  usb.py
src/protocol/usb/enum/: __init__.py  classes.py  descriptor_types.py  endpoint.py  request.py  setup.py  speed.py  usb_versions.py
src/usbip/: __init__.py  exceptions.py  message.py  server.py  usbip.py
testdata/: setting-brightness-filtered.pcapng  setting-zone1-to-red-filtered.pcapng
testdata/qckprism/: connecting-device.pcapng  joined-preset-rainbow-filtered.pcapng  joining-zones-filtered.pcapng  setting-to-ff7f55-filtered.pcapng
