[tool.poetry]
name = "usbip-emu"
version = "0.1.0"
description = ""
authors = ["B Horn <b@horn.uk>"]
packages = [
    { include = "cli", from = "src" },
    { include = "usbip", from = "src" },
    { include = "device", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.3"
Twisted = "^22.10.0"
bitarray = "^2.6.2"
scapy = "^2.5.0"
scipy = "^1.10.0"
PyTermGUI = "^7.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
